# memory-service

./: .env.example  .gitignore  .pylintrc  README.md  main.py  mcp_client_example.py  openapi.json  pyproject.toml  test_api_integration.py  test_mcp_server.py  test_memory_store.py
lib_reference/: retriever_vs_direct_vector_query_analysis.md
logs/: memory-service.log.2025-07-19
src/memserv/core/: config.py  memory_store.py  models.py  service.py
src/memserv/interface/: api.py  mcp_interface.py
